--- a/Frontend/user/signUp.html
+++ b/Frontend/user/signUp.html
@@ -29,6 +29,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
+              <p>Already a user <a href="./login.html">Login</a> </p>
             </div>
           </div>
         </div>
