--- a/Frontend/user/login.html
+++ b/Frontend/user/login.html
@@ -43,6 +43,7 @@
               </div>
               <button type="submit" class="btn btn-primary btn-block">Login</button>
             </form>
+            <div id="form-container"></div>
             <p>Need an Account ? <a href="./signUp.html">Sign Up</a></p>
           </div>
         </div>
