--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,11 +9,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title class="text-center">Expense Tracker</title>
+  <style>
+    body {
+      background-color: #f1f1f1;
+    }
+    .container {
+      margin-top: 50px;
+    }
+    .form-control {
+      border-radius: 0;
+    }
+    .btn-primary {
+      border-radius: 0;
+    }
+  </style>
 </head>
 
 <body>
   <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-  <div class="wrapper" >
+  <!-- <div class="wrapper" >
   <div class="col-md-12">
     <h1 class="text-center" class="text-uppercase "><strong> Expense Tracker</strong></h1>
 
@@ -56,8 +70,37 @@
 <div class="list-container">
     <li class="list-group" id='listOfUsers'></li>
   </div>
+  </div> -->
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-8 col-lg-6">
+        <h1 class="text-center mb-4">Expense Tracker</h1>
+        <form onsubmit="saveToLocalStorage(event)">
+          <div class="form-group">
+            <label for="expenseAmount">Expense Amount:</label>
+            <input type="number" class="form-control" id="expenseAmount" name="expenseAmount" placeholder="Money Spent" required>
+          </div>
+          <div class="form-group">
+            <label for="description">Description:</label>
+            <input type="text" class="form-control" id="description" name="description" placeholder="Text input">
+          </div>
+          <div class="form-group">
+            <label for="Category">Choose a Category:</label>
+            <select class="form-control" id="Category" name="Category">
+              <option>Daily</option>
+              <option>Entertainment</option>
+              <option>Rent</option>
+              <option>Travel</option>
+            </select>
+          </div>
+          <button type="submit" class="btn btn-primary btn-block">Add Expense</button>
+        </form>
+        <br>
+        <h3>Expenses</h3>
+        <div class="list-group" id='listOfUsers'></div>
+      </div>
+    </div>
   </div>
-
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
