--- a/Frontend/user/signUp.html
+++ b/Frontend/user/signUp.html
@@ -2,17 +2,31 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Login Page</title>
+        <title>Sign Up Page</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Load Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+        <style>
+          body {
+            background-color: #f1f1f1;
+          }
+          .container {
+            margin-top: 50px;
+          }
+          .form-control {
+            border-radius: 0;
+          }
+          .btn-primary {
+            border-radius: 0;
+          }
+        </style>
       </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-md-6 col-lg-4">
-              <h1 class="text-center mb-4">Login</h1>
+              <h1 class="text-center mb-4">Sign Up</h1>
               <form id="signUp">
                 <div class="form-group">
                   <label for="name">Name</label>
@@ -21,7 +35,7 @@
                 <div class="form-group">
                   <label for="email">Email address</label>
                   <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" placeholder="Enter email" required>
-                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                 
                 </div>
                 <div class="form-group">
                   <label for="password">Password</label>
@@ -30,6 +44,7 @@
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
               <p>Already a user <a href="./login.html">Login</a> </p>
+              <div id="form-container"></div>
             </div>
           </div>
         </div>
