one to many associations

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -22,55 +22,14 @@
     .btn-primary {
       border-radius: 0;
     }
+    h1.text-center {
+  text-align: center;
+}
   </style>
 </head>
 
 <body>
   <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-  <!-- <div class="wrapper" >
-  <div class="col-md-12">
-    <h1 class="text-center" class="text-uppercase "><strong> Expense Tracker</strong></h1>
-
-    <form onsubmit="saveToLocalStorage(event)">
-
-      <br>
-<div class="user-amount-container">
-      <label for="fname"> Expense Amount: 
-        <input type="number" class="form-control" placeholder="Money Spent" id="expenseAmount" name="expenseAmount" required>
-      </label>
-      <br>
-      <br>
-
-
-      <label for="fname">Description:
-        <input type="text" class="form-control" placeholder="Text input" id="description" name="description">
-      </label>
-      <br>
-      <br>
-
-
-      <label for="fname">Choose a Category:
-        <select class="form-control" id="Category" name="Category">
-          <option>Daily</option>
-          <option>Entertainment</option>
-          <option>Rent</option>
-          <option>Travel</option>
-        </select>
-      </label>
-      <br>
-      <br>
-      <input class="btn btn-primary" type="submit" value="Add Expenses">
-    </div>
-    </form>
-  </div>
-  <br>
- 
-
-<h3>Expenses</h3>
-<div class="list-container">
-    <li class="list-group" id='listOfUsers'></li>
-  </div>
-  </div> -->
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8 col-lg-6">
