--- a/Frontend/user/login.html
+++ b/Frontend/user/login.html
@@ -41,6 +41,7 @@
           <button type="submit" class="btn btn-primary">Login</button>
         </form>
         <p>Need an account? <a href="./signUp.html">Sign up</a></p>
+        <p>Forgot Password? <a href="./forgotPassword.html">Forgot Password</a></p>
         <div id="form-container"></div>
       </div>
     </div>
