--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -33,7 +33,8 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8 col-lg-6">
-        <h3 class="text-center mb-4">Expense Tracker</h3>
+        <h3 class="text-center mb-4">Expense Tracker  <button id="logout" class="btn btn-info btn-block btn-sm" onclick="location.href='./user/login.html'">Logout</button> </h3>
+        
         <form onsubmit="saveToLocalStorage(event)">
           <div class="form-group">
             <label for="expenseAmount">Expense Amount:</label>
