--- a/Frontend/user/forgotPassword.html
+++ b/Frontend/user/forgotPassword.html
@@ -10,12 +10,12 @@
   
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+   
   <div class="container mt-5">
     <h1>Forgot Password</h1>
     <p>Enter your email address below to reset your password.</p>
 
-    <form id="forgotPasswordForm">
+    <form  id="forgotPasswordForm">
       <div class="form-group">
         <label for="email">Email address</label>
         <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
@@ -24,27 +24,33 @@
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script>
-    document.getElementById('forgotPasswordForm').addEventListener('submit', function(event) {
-      event.preventDefault(); // Prevent the form from submitting normally
+   document.getElementById('forgotPasswordForm').addEventListener('submit', function(event) {
+  event.preventDefault(); // Prevent the form from submitting normally
 
-      var email = document.getElementById('email').value;
+  var email = document.getElementById('email').value;
 
-      // Call the backend API using Axios
-      axios.post('http://localhost:5000/password/forgotpassword', { email: email })
-      .then(response => {
-        if(response.status === 202){
-            document.body.innerHTML += '<div style="color:red;">Mail Successfuly sent <div>'
-        } else {
-            throw new Error('Something went wrong!!!')
-        }
-    }).catch(err => {
-        document.body.innerHTML += `<div style="color:red;">${err} <div>`;
+  // Call the backend API using Axios
+  axios.post('http://localhost:5000/password/forgotpassword', { email: email })
+    .then(response => {
+      if (response.status === 200) {
+        document.body.innerHTML += '<div style="color:red;">Mail Successfully sent </div>';
+      } else {
+        throw new Error('Something went wrong!!!');
+      }
     })
+    .catch(err => {
+      document.body.innerHTML += `<div style="color:red;">${err}</div>`;
     });
+});
   </script>
+
+   <script
+   src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.min.js"
+   integrity="sha512-LUKzDoJKOLqnxGWWIBM4lzRBlxcva2ZTztO8bTcWPmDSpkErWx0bSP4pdsjNH8kiHAUPaT06UXcb+vOEZH+HpQ=="
+   crossorigin="anonymous"
+   referrerpolicy="no-referrer"
+ ></script>
 
 </body>
 </html>
