--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -72,6 +72,7 @@
         <br>
         
         <div class="list-group" id='listOfUsers'></div>
+        <div class="pagination" id="pagination"></div>
         <hr>
         
         <div id="leaderboard-button-parent">   
